Fill guestbook and resources pages

--- a/index.html
+++ b/index.html
@@ -223,50 +223,6 @@
             </div>
         </section>
 
-        <section id="uncovering" class="dark-bg">
-            <div>
-                <h2>Uncovering the truth</h2>
-                <p>Article in 1978, trials against Gross</p>
-                <div id="spiegelhof-img">
-                    <figure>
-                        <img src="assets/images/artikel-kurier-1978-12-17.webp"
-                            alt="Image of the 1978 newspaper article 'Ein Arzt aus der Mörderklinik' with fotos of Friedrich Zawrel and Heinrich Gross">
-                        <figcaption>
-                            <em>'Convictee recognized NS physician in Austria's most
-                                prominent court psychiatrist Dr. Gross.
-                                A doctor from the NS murderers' clinic.' </em><br>
-                            Kurier, December 17, 1978
-
-                        </figcaption>
-                    </figure>
-                </div>
-
-            </div>
-        </section>
-
-        <section id="eulogy" class="light-bg">
-            <div>
-                <h2>Eulogy</h2>
-                <!-- <p>Contribution and legacy of F Zawrel
-                    embed <video src=""></video>
-                    color picture of him and gravestone
-                    picture of bridge? link to report
-
-                </p> -->
-
-                <!-- <figure>
-                    <img src="assets/images/friedrich-zawrel-1978-artikel.jpg"
-                        alt="Image of the 1978 newspaper article 'Ein Arzt aus der Mörderklinik' with fotos of Friedrich Zawrel and Heinrich Gross">
-                    <figcaption>
-                        <em>'Convictee recognized NS physician in Austria's most
-                        prominent court psychiatrist Dr. Gross.
-                        A doctor from the NS murderers' clinic.' </em><br>
-                        Kurier, December 17, 1978
-                    
-                    </figcaption>
-                </figure> -->
-            </div>
-        </section>
 
         <section id="guestbook-form" class="dark-bg">
 
@@ -309,11 +265,15 @@
         <div id="socials-container">
             <ul id="socials">
                 <li>Find us on:</li>
-                <li><a href="https://www.facebook.com" aria-label="Go to our Facebook profile (opens in a new tab)" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
+                <li><a href="https://www.facebook.com" aria-label="Go to our Facebook profile (opens in a new tab)"
+                        target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
                 </li>
-                <li><a href="https://www.instagram.com" aria-label="Link to our Instagram profile (opens in a new tab)" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-                <li><a href="https://mastodon.social" aria-label="Link to our Mastodon profile (opens in a new tab)" target="_blank"><i class="fa-brands fa-mastodon"></i></a></li>
-                <li><a href="https://www.tiktok.com" aria-label="Link to our TikTok profile (opens in a new tab)" target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
+                <li><a href="https://www.instagram.com" aria-label="Link to our Instagram profile (opens in a new tab)"
+                        target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="https://mastodon.social" aria-label="Link to our Mastodon profile (opens in a new tab)"
+                        target="_blank"><i class="fa-brands fa-mastodon"></i></a></li>
+                <li><a href="https://www.tiktok.com" aria-label="Link to our TikTok profile (opens in a new tab)"
+                        target="_blank"><i class="fa-brands fa-tiktok"></i></a></li>
             </ul>
         </div>
     </footer>
