--- a/resources.html
+++ b/resources.html
@@ -53,8 +53,28 @@
 
 
     <!-- Main content-->
-    <main>
-        Main Content
+    <main  id="resources">
+       <section id="zawrel-video" class="light-bg">
+        <h2>Talk by Friedrich Zawrel (in German)</h2>
+    <div id="video-container">
+        <iframe src="https://www.youtube.com/embed/KZ7EdpHxIQ0" frameborder="0" allowfullscreen id="video"></iframe>
+    </div>
+</section>
+<section id="link-lists">
+    <h2>Links</h2>
+    <div id="links-container">
+        
+        <ul id="links">
+            <li><a href="https://de.wikipedia.org/wiki/Friedrich_Zawrel" aria-label="Go to the German Wikipedia page on Friedrich Zawrel (opens in a new tab)" target="_blank">Wikipedia: Friedrich Zawrel (German)</a></li>
+            <li><a href="https://gedenkstaettesteinhof.at/de/interviews/transscript/Friedrich-Zawrel" aria-label="Read a transcript of a German-language interview with Friedrich Zawrel or follow the link on the transcript page to the original video (opens in a new tab)" target="_blank">Interview with Friedrich Zawrel (German)</a> </li>
+            <li><a href="https://www.falter.at/zeitung/20240528/eine-bruecke-fuer-friedrich-zawrel" aria-label="Read a German-language newspaper article about a bridge being named after Friedrich Zawrel in 2024 (opens in a new tab)"" target="_blank">Newspaper article: "A Bridge for Friedrich Zawrel" (German)</a></li>
+            <li><a href="https://ahrp.org/1940-1945-special-childrens-ward/" target="_blank" aria-label="Read an article about the clinic 'Am Spiegelgrund' in Vienna between 1940 and 1945 (opens in a new tab)">"Am Spiegelgrund” in Vienna, “Special Children’s Ward” 1940–1945 (CW: pictures of abused children)</a></li>
+            <li><a href="https://www.youtube.com/watch?v=T8_6PWnD8vM" target="_blank" aria-label="Watch a documentary about the NS euthanasia program (in German with English subtitles) (opens in a new tab)">As if they never had existed (video, German/English subs)</a> </li>
+        </ul>
+    </div>
+</section>
+
+       
     </main>
 
     <!-- Footer -->
