Fix errors from Markup validation

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <section id="childhood" class="light-bg">
             <div id="childhood-container">
 
-                <h2>Childhood</h2>
+                <h2><span id="childhood-h2">Childhood</span></h2>
 
                 <div id="childhood-text-1">
 
